[package]
name = "stm4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-semihosting = "0.6.0"

[dependencies.stm32f4xx-hal]
version = "0.15.0"
features = ["stm32f407", "rt"]